# rustls-self-signed-demo

./: Cargo.toml  README.md
fake-client/: Cargo.toml
fake-client/src/: main.rs
fake-server/: Cargo.toml
fake-server/src/: main.rs
